Partial shutdown of virtual threads for Ice4j.